<resources>
    <string name="app_name">Move Your App</string>
    <string name="map">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="textview">TextView</string>
    <string name="move_your_app">Move Your App</string>
    <string name="marker_detail_latlng">(%1$.5f, %2$.5f)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_rutas">Rutas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="salir">Salir</string>
    <string name="title_activity_ruta">Ruta</string>

    <string name="ruta_1">Ruta 5</string>
    <string name="ruta_2">Ruta 7</string>
    <string name="ruta_3">Ruta 9</string>
    <string name="ruta_4">Ruta 10</string>
    <string name="ruta_5">Ruta 12</string>
    <string name="ruta_6">Ruta 13</string>
    <string name="ruta_7">Ruta 14</string>
    <string name="ruta_8">Ruta 17</string>
    <string name="ruta_9">Ruta 19</string>
    <string name="ruta_10">Ruta 20</string>
    <string name="ruta_11">Ruta 21</string>
    <string name="ruta_12">Ruta 24</string>
    <string name="ruta_13">Ruta 27</string>
    <string name="ruta_14">Ruta 28</string>
    <string name="ruta_15">Ruta 29</string>
    <string name="ruta_16">Ruta 31</string>
    <string name="ruta_17">Ruta 33</string>
    <string name="ruta_18">Ruta 36</string>
    <string name="ruta_19">Ruta 37</string>
    <string name="ruta_20">Ruta 38</string>
    <string name="ruta_21">Ruta 40</string>
    <string name="ruta_22">Ruta 41</string>
    <string name="ruta_23">Ruta 43</string>
    <string name="ruta_24">Ruta 44</string>
    <string name="ruta_25">Ruta 45</string>
    <string name="ruta_26">Ruta 50</string>
    <string name="ruta_27">Ruta 51</string>
    <string name="ruta_28">Ruta 53</string>
    <string name="ruta_29">Ruta 54</string>
    <string name="ruta_30">Ruta 55</string>
    <string name="ruta_31">Ruta 56</string>
    <string name="ruta_32">Ruta 58</string>
    <string name="ruta_33">Ruta 59</string>
    <string name="ruta_34">Ruta 61</string>
    <string name="ruta_35">Ruta 62</string>
    <string name="ruta_36">Ruta 65</string>
    <string name="ruta_37">Ruta 66</string>
    <string name="ruta_38">Ruta 67</string>
    <string name="ruta_39">Ruta 69</string>
    <string name="ruta_40">Ruta 70</string>
    <string name="ruta_41">Ruta 72</string>
    <string name="ruta_42">Ruta 75</string>
    <string name="ruta_43">Ruta 76</string>
    <string name="ruta_44">Ruta 77</string>
    <string name="ruta_45">Ruta 78</string>
    <string name="ruta_46">Ruta 79</string>
    <string name="ruta_47">Ruta 80</string>
    <string name="ruta_48">Ruta 81</string>
    <string name="ruta_49">Ruta 83</string>
    <string name="ruta_50">Ruta 84</string>
    <string name="ruta_51">Ruta 85</string>
    <string name="ruta_52">Ruta 87</string>
    <string name="ruta_53">Ruta 88</string>
    <string name="ruta_54">Ruta 92</string>
    <string name="ruta_55">Ruta 94</string>
    <string name="ruta_56">Ruta 96</string>
    <string name="ruta_57">Ruta 98</string>
    <string name="ruta_58">Ruta 105</string>
    <string name="ruta_59">Ruta 121</string>
    <string name="ruta_60">Ruta 122</string>
    <string name="ruta_61">Ruta 123</string>
    <string name="ruta_62">Ruta 125</string>
    <string name="ruta_63">Línea 4</string>
    <string name="ruta_64">Línea 7</string>
    <string name="ruta_65">Línea 8</string>
    <string name="ruta_92">Ruta 92</string>
    <string name="ruta_137">Ruta 137</string>
    <string name="move_your_apps">Move Your App</string>


</resources>

