<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.example.escritorio.gps.Rutas">


            <android.support.design.widget.BottomNavigationView
                android:id="@+id/navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="?android:attr/windowBackground"
                app:menu="@menu/navigation" />

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/title_home" />

            <TableRow
                android:id="@+id/container1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Ruta1"
                    style="@android:style/Widget.Material.Button.Inset"
                    android:layout_width="@dimen/buttonWidth"
                    android:layout_height="wrap_content"
                    android:onClick="DrawRoute"
                    android:text="@string/ruta_1"
                    android:textSize="@dimen/textSize" />

                <Button
                    android:id="@+id/Ruta2"
                    style="@android:style/Widget.Material.Light.Button.Inset"
                    android:layout_width="@dimen/buttonWidth"
                    android:layout_height="wrap_content"
                    android:onClick="DrawRoute"
                    android:text="@string/ruta_2"
                    android:textSize="@dimen/textSize" />

                <Button
                    android:id="@+id/Ruta3"
                    style="@android:style/Widget.Material.Light.Button.Inset"
                    android:layout_width="@dimen/buttonWidth"
                    android:layout_height="wrap_content"
                    android:onClick="DrawRoute"
                    android:text="@string/ruta_3"
                    android:textSize="@dimen/textSize" />

            </TableRow>

            <TableRow
                android:id="@+id/container2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Ruta4"
                    style="@android:style/Widget.Material.Light.Button.Inset"
                    android:layout_width="@dimen/buttonWidth"
                    android:layout_height="wrap_content"
                    android:onClick="DrawRoute"
                    android:text="@string/ruta_4"
                    android:textSize="@dimen/textSize" />

                <Button
                    android:id="@+id/Ruta5"
                    style="@android:style/Widget.Material.Light.Button.Inset"
                    android:layout_width="@dimen/buttonWidth"
                    android:layout_height="wrap_content"
                    android:onClick="DrawRoute"
                    android:text="@string/ruta_5"
                    android:textSize="@dimen/textSize" />

                <Button
                    android:id="@+id/Ruta6"
                    style="@android:style/Widget.Material.Light.Button.Inset"
                    android:layout_width="@dimen/buttonWidth"
                    android:layout_height="wrap_content"
                    android:onClick="DrawRoute"
                    android:text="@string/ruta_6"
                    android:textSize="@dimen/textSize" />
            </TableRow>

            <TableRow
                android:id="@+id/container3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Ruta7"
                    style="@android:style/Widget.Material.Light.Button.Inset"
                    android:layout_width="@dimen/buttonWidth"
                    android:layout_height="wrap_content"
                    android:onClick="DrawRoute"
                    android:text="@string/ruta_7"
                    android:textSize="@dimen/textSize" />

                <Button
                    android:id="@+id/Ruta8"
                    style="@android:style/Widget.Material.Light.Button.Inset"
                    android:layout_width="@dimen/buttonWidth"
                    android:layout_height="wrap_content"
                    android:onClick="DrawRoute"
                    android:text="@string/ruta_8"
                    android:textSize="@dimen/textSize" />

                <Button
                    android:id="@+id/Ruta9"
                    style="@android:style/Widget.Material.Light.Button.Inset"
                    android:layout_width="@dimen/buttonWidth"
                    android:layout_height="wrap_content"
                    android:onClick="DrawRoute"
                    android:text="@string/ruta_9"
                    android:textSize="@dimen/textSize" />
            </TableRow>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="38dp">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"></android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            app:tabMode="scrollable">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tab1" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tab2" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tab3" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tab4" />
        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>
